--- a/src/style.css
+++ b/src/style.css
@@ -17,14 +17,15 @@ body {
   background-color: #fff;
 }
 
-.sample {
+.heading {
   display: flex;
+  align-items: center;
   justify-content: space-between;
 }
 
-.sample i {
+.heading i {
   position: relative;
-  top: 24px;
+  top: 8px;
   margin-right: 20px;
   cursor: pointer;
 }
@@ -52,6 +53,7 @@ body {
   margin-left: 12px;
   font-style: italic;
   padding: 12px;
+  width: 94%;
 }
 
 .container h2 {
@@ -80,7 +82,7 @@ body {
   margin: 0;
 }
 
-.more {
+.remove {
   margin-left: auto;
   margin-right: 20px;
   cursor: pointer;
