--- a/src/style.css
+++ b/src/style.css
@@ -82,7 +82,13 @@ body {
   margin: 0;
 }
 
-.remove {
+.icon {
+  margin-left: auto;
+  margin-right: 20px;
+  cursor: pointer;
+}
+
+.icon2 {
   margin-left: auto;
   margin-right: 20px;
   cursor: pointer;
@@ -93,4 +99,12 @@ body {
   left: 0;
   z-index: 5;
   width: 20%;
+}
+
+.hidden {
+  display: none
+}
+
+.highlight{
+  background-color: #fbfecd;
 }
